app/gitops/manifests/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"person:1.0"},"fieldPath":"spec.template.spec.containers[?(@.name==\"person\")].image"}]'
    openshift.io/generated-by: OpenShiftNewApp
  labels:
    app: person
    app.kubernetes.io/component: person
    app.kubernetes.io/instance: person
  name: person
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deployment: person
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        deployment: person
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/pwr-demo/person:1.0
        imagePullPolicy: IfNotPresent
        name: person
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        - containerPort: 8778
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
